assets/simpleGridTemplate.css
@charset "UTF-8";
body {
    margin: 0;
    background: #fffcf9;
    overflow-x: hidden;
}
.menu {
    background: black;
    height:40px;
    padding:.5em;
    position:absolute;
    display: block;
    top: 235px;
    width: 90%;
    z-index: 10;
}
#title {
    font-family: 'Sarabun', sans-serif;
}
.fixed {
    position:fixed;
    top:0;
}
.menu_item:hover {
    color: orange;
}

a {
    text-decoration: none;
    color: inherit;
}
.hero_header {
	color: #FFFFFF;
	text-align: center;
	margin: 0;
	letter-spacing: 2px;
}
/* About Section */
.text_column {
	width: 90%;
	text-align: left;
	font-weight: lighter;
	line-height: 25px;
	float: left;
	padding-left: 20px;
	padding-right: 20px;
	color: #A3A3A3;
}
.gallery {
	clear: both;
	display: inline-block;
	width: 100%;
	 /*[disabled]min-width: 400px;*/
	padding-bottom: 35px;
	padding-top: 0px;
	margin-bottom: 0px;
    width: 90%;
    margin-left: 5%;
}
.thumbnail {
	width: 23%;
	height: 400px;
	text-align: center;
	float: left;
	margin-top: 35px;
	background-color: #f2f2f2;
	padding-bottom: 20px;
	margin-left: 1%;
	margin-right: 1%;
	padding-top: 20px;
	border-bottom: 4px solid #e0e0e0;
    border-radius: 5px;
}
.thumbnail:hover {
	transform: scale(1.003);
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.gallery .thumbnail h4 {
	margin-top: 5px;
	margin-bottom: 5px;
	color: #52BAD5;
	text-align: left;
	padding-left: 20px;
	padding-right: 20px;
}
.gallery .thumbnail i {
    color: #B3B3B3;
    font-size: 13px;
    display: block;
    padding: 0px;
    margin: 0px;
}
.gallery .thumbnail p {
	margin: 0;
	color: #B3B3B3;
	text-align: left;
	padding-left: 20px;
}
.text_footer a {
    text-decoration: none;
    color: #4892a5;
}
.gallery a:hover {
    font-weight: bold;
    color: #264a54;
}
/* More info */
.intro {
    font-family: 'Thasadith', sans-serif;
	padding-bottom: 55px;
}
.cards {
	width: 100%;
	height: auto;
	max-width: 400px;
	max-height: 200px;
	opacity: 0.8;
}

.button {
	width: 400px;
	margin-top: 40px;
	margin-right: auto;
	margin-bottom: auto;
	margin-left: auto;
	padding-top: 20px;
	padding-right: 10px;
	padding-bottom: 20px;
	padding-left: 10px;
	text-align: center;
	vertical-align: middle;
	border-radius: 0px;
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 2px;
	border: 3px solid #FFFFFF;
	color: #FFFFFF;
	transition: all 0.3s linear;
}
.button:hover {
	background-color: #7a795e;
	color: #FFFFFF;
	cursor: pointer;
}
.copyright {
    font-family: 'Sarabun', sans-serif;
	text-align: center;
	padding-top: 20px;
	padding-bottom: 20px;
	background-color: black;
	color: #FFFFFF;
	text-transform: uppercase;
	font-weight: lighter;
	letter-spacing: 2px;
	border-top-width: 2px;
}
footer {
	background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);
	padding-top: 60px;
	padding-bottom: 60PX;
    font-family: 'Noto Sans', sans-serif;
}
.profile {
	width: 350px;
	height: 350px;
	border-radius: 50%;
}
.gallery .thumbnail .tag {
	color: #5D5E5D;
	padding-bottom: 4px;
	padding-top: 4px;
	text-align: left;
	padding-left: 20px;
	padding-right: 20px;
}
.tag a {
    color: #5D5E5D;
    text-decoration: none;
}
/*----------------FULL SCREEN----------------*/
@media only screen and (min-width: 1097px) {
    #site {
        margin-top: 100px;
        width: 90%;
        margin-left: 5%;
    }
    #title {
        font-family: 'Sarabun', sans-serif;
        margin: .1em 0 0 .2em;
        font-size: 100px;
        padding: 0;
    }
    .intro {
        margin-top: 81px;
    }
    .intro p {
        font-size: 30px;
    }
    .intro #desc {
        height: 300px;
    }
    .intro #icon {
        float: right;
        width: 400px;
        padding-left: 30px;
    }
    .intro #start {
        position: relative;
        z-index: -1;
        padding: 0 20px 0 0;
        float: left;
        clear: right;
        width: 30%;
    }
    #menu_container {
        width: 49em;
        margin: auto;
    }
    .menu_item {
        text-align: center;
        font-size: 1.5em;
        font-family: 'Julius Sans One', sans-serif;
        margin-top: .2em;
        list-style: none;
        display: inline-block;
        width: 8em;
        color: whitesmoke;
    }
    
    .wrapper {
        box-shadow: 10px 10px 5px grey;
        padding: 10px 20px 0px 20px;
        margin: 0px 20% 50px 20%;
    }
    
    .wrapper .date {
        text-align: right;
        font-family: sans-serif;
        color: darkgray;
        padding: 0px;
        margin: 0px;
    }
    
    .wrapper .header {
        font-family: sans-serif;
        font-size: 3em;
        margin-bottom: 0px;
        margin-top: 20px;
    }
    
    .wrapper .sub {
        margin-top: 0px;
        margin-bottom: 10px;
        font-size: 1em;
        color: grey;
    }
    
    .content {
        padding: 20px;
    }
    
    .wrapper .content .image {
        margin: 0px 10% 0px 10%;
    }
    
    .wrapper img {
        max-width: 100%;
        max-height: 100%;
        border: 5px dashed black;
    }
    
    .content p {
        font-family: cursive;
        font-size: 20px;
        text-align: justify;
    }
    
    .content .signature {
        font-style: italic;
        text-align: right;
        margin-right: 30px;
    }
}
/* Small Desktops */
@media (min-width: 770px) and (max-width: 1096px) {
    #site {
        margin-top: 130px;
        width: 95%;
        margin-left: 2.5%;
    }
    #title {
        font-family: 'Sarabun', sans-serif;
        margin: .1em 0 0 .2em;
        font-size: 80px;
        padding: 0;
    }
    .menu {
        width: 100%;
        margin-left: -2.5%;
    }
    .fixed {
        top: 0;
    }
    .intro {
        margin-top: 81px;
    }
    .intro p {
        font-size: 28px;
    }
    .intro img {
        float: right;
        width: 300px;
        padding-left: 30px;
    }
    .thumbnail {
        width: 48%;
        border-radius: 5px;
    }
    .text_column {
        width: 90%;
        margin: 0;
        padding: 20px;
    }
    #menu_container {
        width: 49em;
        margin: auto;
    }
    
    .menu_item {
        text-align: center;
        font-size: 1.5em;
        font-family: 'Julius Sans One', sans-serif;
        margin-top: .2em;
        list-style: none;
        display: inline-block;
        width: 8em;
        color: whitesmoke;
    }
}


/* Small Tablets */
@media (min-width: 415px)and (max-width: 769px) {
    #site {
        margin-top: 170px;
        width: 95%;
        margin-left: 2.5%;
    }
    #title {
        margin: auto auto 90px auto;
        text-align: center;
        font-size: 60px;
        padding: 0;
    }
    .menu {
        height: 30px;
        width: 100%;
        margin-left: -2.5%;
    }
    .fixed {
        top: 0;
    }
    .intro img {
        display: none;
    }
    .intro p {
        font-size: 40px;
        text-align: center;
        width: 80%;
        margin-left: 10%;
    }
    #menu_container {
        width: 36em;
        margin: auto;
    }
    
    .menu_item {
        text-align: center;
        font-size: 1.1em;
        font-family: 'Julius Sans One', sans-serif;
        margin-top: .2em;
        list-style: none;
        display: inline-block;
        width: 8em;
        color: whitesmoke;
    }
    .text_column {
        width: 100%;
        text-align: left;
        padding: 0;
    }
    .thumbnail {
        width: 100%;
    }
    .column {
        width: 100%;
        margin-top: 0px;
    }
    .thumbnail {
        width: 100%;
        border-radius: 0px;
    }
    .text_column {
        padding-left: 20px;
        padding-right: 20px;
        width: 90%;
    }
}


/* Mobile */
@media (max-width: 414px) {
    #title {
        text-align: center;
    }
    .menu {
        top: 0px;
        width: 100%;
        display: block;
        position: relative;
        /*margin-left: -2.5%;*/
    }
    .fixed {
        top: 0;
    }
    #menu_container {
        width: 49em;
        margin: auto;
    }
    
    .menu_item {
        text-align: center;
        font-size: 1em;
        font-family: 'Julius Sans One', sans-serif;
        margin-top: .2em;
        list-style: none;
        display: inline-block;
        width: 5em;
        color: whitesmoke;
    }
    .intro {
        text-align: center;
        width: 80%;
        margin-left: 10%;
        font-size: 20px;
    }
    /*.intro img {
        width: 100%;
        text-align: center;
        margin-top: 13px;
        margin-right: 0px;
        margin-bottom: 0px;
        margin-left: 0px;
    }*/
    .intro img {
        display: none;
    }
    .text_column {
        width: 100%;
        text-align: justify;
        padding: 0;
    }
    .text_column {
        padding-left: 20px;
    }
    .thumbnail {
        width: 100%;
        border-radius: 0px;
    }
    .hero_header {
        padding-left: 10px;
        padding-right: 10px;
        line-height: 22px;
        text-align: center;
    }
}

